# SecureVault

./: .gitignore  CHANGELOG.md  README.md  build-windows.bat  deep-research-thinking-20260224-184921.md  package-lock.json  package.json
src/: App.css  App.tsx  QuickPanel.tsx  quickpanel-entry.tsx  settingsStore.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: commands.rs  crypto.rs  db.rs  lib.rs  main.rs  models.rs
src/components/: Settings.tsx  TitleBar.tsx
src/hooks/: useGlobalShortcut.ts
