[package]
name = "securevault"
version = "0.2.0"
description = "A secure local-first password manager"
authors = ["you"]
edition = "2021"

[lib]
name = "securevault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encryption - minimal
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Database - using SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities - minimal
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
thiserror = "2"

# For secure memory handling
zeroize = { version = "1", features = ["derive"] }

# Thread-safe mutex
parking_lot = "0.12"

# For simulating keyboard input (password auto-fill)
enigo = "0.2"

# Async runtime for delayed clipboard clearing
tokio = { version = "1", features = ["time"] }
tauri-plugin-store = "2"
tauri-plugin-log = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
